--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,16 @@
 {
-    "typescript.tsdk": "node_modules\\typescript\\lib",
-    "i18n-ally.localesPaths": [
-        "docs/assets/i18n",
-        "src/assets/i18n"
-    ]
+  "files.exclude": {
+    "amplify/.config": true,
+    "amplify/**/*-parameters.json": true,
+    "amplify/**/amplify.state": true,
+    "amplify/**/transform.conf.json": true,
+    "amplify/#current-cloud-backend": true,
+    "amplify/backend/amplify-meta.json": true,
+    "amplify/backend/awscloudformation": true
+  },
+  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "i18n-ally.localesPaths": [
+    "docs/assets/i18n",
+    "src/assets/i18n"
+  ]
 }
