--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@slickgrid-universal/row-detail-view-plugin": "~2.1.2",
     "@slickgrid-universal/rxjs-observable": "~2.1.2",
     "@types/jquery": "^3.5.14",
+    "aws-amplify": "^5.0.4",
+    "aws-amplify-angular": "^6.0.60",
     "dequal": "^2.0.3",
     "dompurify": "^2.4.1",
     "jquery": "^3.6.1",
